<resources>
    <string name="app_name">MinesweeperAndroid</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="custom">Custom</string>
    <string name="minesweeper">Minesweeper</string>
    <string name="play">Play</string>
    <string name="custom_game_mode">Custom Game Mode</string>
    <string name="number_of_rows_string">Number of Rows</string>
    <string name="number_of_cols_string">Number of Columns</string>
    <string name="amount_of_bombs_in_percent_string">Amount of Bombs in percent</string>
    <string name="start_game">Start Game</string>
    <string name="reload_icon">reload icon</string>
    <string name="new_game">New Game</string>
    <string name="return_to_menu">Return to Menu</string>
    <string name="replay">Replay</string>
    <string name="you_won_string">You Won !</string>
    <string name="gameover">Gameover</string>
    <string name="another_chance">+ 1 Life</string>
    <string name="parameter_icon">Parameter Icon</string>

    <string name="game_timer">%1$s:%2$s</string>
    <string name="timer">Game Timer</string>
    <string name="change_mode_image">change mode image</string>
    <string name="no_highscore_yet">No highscore yet</string>
    <string name="highscore">%1d min %2$d sec</string>
</resources>