<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/easyLevelButton"
        android:layout_width="158dp"
        android:layout_height="55dp"
        android:layout_marginTop="128dp"
        android:text="@string/easy"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/normalLevelButton"
        android:layout_width="158dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:text="@string/normal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyLevelButton" />

    <Button
        android:id="@+id/hardLevelButton"
        android:layout_width="158dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:text="@string/hard"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normalLevelButton" />

    <Button
        android:id="@+id/customLevelButon"
        android:layout_width="158dp"
        android:layout_height="55dp"
        android:layout_marginTop="56dp"
        android:text="@string/custom"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hardLevelButton" />

</androidx.constraintlayout.widget.ConstraintLayout>