<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomGameActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/pixelated_pusab"
        android:text="@string/custom_game_mode"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.slider.Slider
        android:id="@+id/rowsSlider"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:contentDescription="@string/number_of_rows_string"
        android:stepSize="1.0"
        android:valueFrom="5.0"
        android:valueTo="20.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixelated_pusab"
        android:text="@string/number_of_rows_string"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/rowsSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.slider.Slider
        android:id="@+id/colsSlider"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/number_of_cols_string"
        android:stepSize="1.0"
        android:valueFrom="5.0"
        android:valueTo="20.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rowsSlider"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixelated_pusab"
        android:text="@string/number_of_cols_string"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/colsSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.slider.Slider
        android:id="@+id/bombsSlider"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/amount_of_bombs_in_percent_string"
        android:valueFrom="12.0"
        android:valueTo="80.0"
        android:value="30.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colsSlider"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pixelated_pusab"
        android:text="@string/amount_of_bombs_in_percent_string"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bombsSlider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/pixelated_pusab"
        android:text="@string/start_game"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bombsSlider" />
</androidx.constraintlayout.widget.ConstraintLayout>