<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        >

        <TextView
            android:id="@+id/nbFlagsRemaining"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/alarm_clock"
            android:text="Number Here"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/reloadBoard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/nbFlagsRemaining"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/reloadicon"
            android:contentDescription="@string/new_game" />

        <ImageView
            android:id="@+id/switchmode"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="change mode image" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Game View -->

    <SurfaceView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1" />

    <!-- Player Win popup -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/playerWin">

        <Button
            android:id="@+id/returnMenuButton"
            android:layout_width="241dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:text="@string/return_to_menu"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/replayButton" />

        <Button
            android:id="@+id/replayButton"
            android:layout_width="151dp"
            android:layout_height="61dp"
            android:text="@string/replay"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_won_string"
            android:textSize="70sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.310" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playerLose"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="569dp">

        <Button
            android:id="@+id/replayButton2"
            android:layout_width="204dp"
            android:layout_height="69dp"
            android:text="@string/replay"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.644" />

        <Button
            android:id="@+id/anotherChance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/another_chance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/replayButton2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gameover"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35" />

        <Button
            android:id="@+id/returnMenuButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_to_menu"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anotherChance" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>